GuicedEE Version 2 Updates