@@ -117,6 +117,8 @@
             <scope>test</scope>
         </dependency>
 
+
+
     </dependencies>
 
     <build>
@@ -156,6 +158,13 @@
                 <artifactId>copy-rename-maven-plugin</artifactId>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-reads org.hibernate.orm.core=entity.assist.test</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
